# Liveflow

./: .gitignore  README.md  package-lock.json  package.json  turbo.json
apps/landing/: package.json
apps/landing/app/: globals.css  layout.tsx  page.tsx
apps/landing/components/landing/: AgentVisualization.tsx  BackgroundParticles.tsx  FadeIn.tsx  FinalCTA.tsx  Footer.tsx  HeroSection.tsx  HeroVisualizer.tsx  HowItWorks.tsx  LiveflowDemo.tsx  Navbar.tsx
apps/landing/components/ui/: bar-visualizer.tsx  matrix.tsx
apps/vscode-extension/: .vscodeignore  LICENSE  package-lock.json  package.json
apps/vscode-extension/src/: extension.ts  webviewProvider.ts
extension/: .vscodeignore  package.json  tsconfig.json
extension/src/: types.ts  wsClient.ts
extension/webview/: index.html  package-lock.json  package.json
extension/webview/src/: styles.css
extension/webview/src/components/: ChatInspector.tsx  ToolTimeline.tsx
extension/webview/src/hooks/: useVscodeMessages.ts
extension/webview/src/store/: index.ts
python/: README.md  pyproject.toml
python/liveflow/: __main__.py  _auto_hook.py  child_hook.py  code_scanner.py  forwarder.py  interceptor.py  proc_main_wrapper.py  protocol.py  ws_server.py
