[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liveflow"
version = "0.1.0"
description = "Real-time LiveKit agent visualizer — observe agent state, tool calls, and conversations without modifying your code."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Lakshya", email = "lakshyapaliwalodd@gmail.com" }]
keywords = ["livekit", "agents", "voice", "visualization", "debugging", "realtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]

dependencies = [
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/21lakshh/Liveflow"
Repository = "https://github.com/21lakshh/Liveflow"

[project.scripts]
liveflow = "liveflow.__main__:main"
